# lancelot

./: .envrc  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  CLAUDE.md  Cargo.toml  README.md  justfile
.env/: devshell.toml  flake.nix
.github/: dependabot.yml
.github/actions/maturin/: Dockerfile  action.yml  pre-entrypoint.sh
.github/scripts/: pytest-pyflirt.sh  pytest-pylancelot.sh
.github/workflows/: Dockerfile  bindings.yml  build-pylancelot.sh  build.yaml  bump-version.sh  ci.yml  lints.yml  publish-cargo.yaml  publish-pypi.yaml  python-wheels.yaml
address_space/: address_space.go  snapshot.go
analysis/: analysis.go
analysis/file/: README.md  file_analysis.go
analysis/file/entry_point/: entry_point.go
analysis/file/prologue/: prologue.go
analysis/function/: README.md  events.go  function_analysis.go
analysis/function/control_flow/: control_flow.go
analysis/function/direct_calls/: direct_calls.go
analysis/function/indirect_flow/: indirect_flow.go
analysis/function/name/: name_analysis.go
analysis/function/stack_delta/: stack_delta.go
app/dora/: run_dora.go
app/emudbg/: emudbg.go
app/graph/: graph.go
app/linear_disassembler/: run_ld.go
artifacts/: artifacts.go  basic_block.go  const.go  function.go
config/: config.go
core/: Cargo.toml  README.md  build.rs
core/benches/: core.rs  emu.rs
core/resources/test/: .gitignore  MFCM140.lib  cpp1.exe_  libc  ls  nop_elf  test_DWARF  tiny-x64
core/src/: arch.rs  aspace.rs  basicblock.rs  config.rs  flowmeta.rs  insn.rs  lib.rs  loader.rs  module.rs  pagemap.rs  rsrc.rs  test.rs  util.rs  workspace.rs
core/src/analysis/: call_graph.rs  cfg.rs  config.rs  dis.rs  flirt.rs  heuristics.rs  mod.rs  orphans.rs
core/src/analysis/cfg/: code_references.rs  flow.rs  global.rs  instruction_index.rs  local.rs  mod.rs  noret.rs  thunk.rs
core/src/analysis/elf/: call_targets.rs  dwarf.rs  entrypoints.rs  exports.rs  fde.rs  jump_targets.rs  mod.rs  noret_imports.rs  patterns.rs  plt.rs  symtab.rs
core/src/analysis/pe/: call_targets.rs  cfguardtable.rs  code_references.rs  control_flow_guard.rs  entrypoint.rs  entrypoints.rs  exports.rs  imports.rs  mod.rs  noret_imports.rs  patterns.rs  pointers.rs  relocs.rs  rf_code_references.rs  runtime_functions.rs  runtimefunctions.rs  safeseh.rs
core/src/analysis/pe/fids/src/: ItemDeserializer.java
core/src/analysis/pe/flirt/: mod.rs
core/src/analysis/pe/sigs/: mod.rs
core/src/analysis/pe/sigs/patterns/: x86win_patterns.xml
core/src/emu/: mmu.rs  mod.rs  reg.rs
core/src/emu/plat/win/: api.rs  mod.rs  win32.rs  win64.rs
core/src/loader/: mod.rs
core/src/loader/coff/: mod.rs
core/src/loader/elf/: import.rs  mod.rs
core/src/loader/pe/: imports.rs  mod.rs  reloc.rs  rsrc.rs
core/src/loaders/: pe.rs  sc.rs
core/src/workspace/: cfg.rs  config.rs  formatter.rs  mod.rs
core/src/workspace/export/: binexport2.proto  binexport2.rs  mod.rs  pb.rs
disassembly/: disassembly.go
disassembly/emu_disassembler/: emu_disassembler.go
disassembly/linear_disassembler/: linear_disassembler.go
emulator/: emulator.go  hooks.go  snapshot.go
flirt/: Cargo.toml  README.md  __EH_prolog3.yara  sig.bt
flirt/benches/: fragments.txt  patterns.txt  regex.rs
flirt/sigs/pat/: __EH_prolog3.pat
flirt/sigs/sig/: libcmt_15_msvc_x86.dumpsig
flirt/src/: decision_tree.rs  lib.rs  nfa.rs  pattern_set.rs
flirt/src/pat/: mod.rs
flirt/src/sig/: mod.rs
jslancelot/: Cargo.toml  README.md  zcc
jslancelot/src/: lib.rs
loader/: loader.go
loader/pe/: pe.go
persistence/: const.go  persistence.go
persistence/log/: log_persistence.go
persistence/memory/: mem_persistence.go  mem_persistence_test.go
persistence/mux/: mux_persistence.go
pwa/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  Caddyfile.dev  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.testing.json  webpack.config.js
pwa/public/: index.html
pwa/public/css/: style.css
pwa/public/lancelot/: index.html
pwa/src/app/lancelot/: index.ts  index.tsx  nop.ts
pwa/src/components/: canvas.tsx  common.tsx  graphview.tsx  metrics.ts  omnibar.tsx  settings.ts  store.ts  utils.ts  vfs.ts
pwa/tests/: test_demo.ts
pyflirt/: Cargo.toml  README.md  pyproject.toml
pyflirt/src/: lib.rs
pyflirt/tests/: fixtures.py  test_pyflirt.py
pyflirt/tests/data/: __EH_prolog3.pat  __EH_prolog3.sig
pylancelot/: .gitattributes  .gitignore  .justfile  Cargo.toml  README.md  justfile  pyproject.toml  setup.py
pylancelot/.env/: devshell.toml  flake.nix
pylancelot/python/lancelot/: __init__.py
pylancelot/python/lancelot/be2utils/: __init__.py  binexport2_pb2.py  binexport2_pb2.pyi
pylancelot/scripts/: capa_lancelot.py  generate-binexport2.py  inspect-workspace.py  list-functions.py  show-strings-by-function.py
pylancelot/src/: lib.rs
pylancelot/tests/: conftest.py  fixtures.py  test_pylancelot.py
pylancelot/tests/data/: k32.dll_
resources/evaluation/SoK/: analyze-sok.ipynb  benchmark.py  dump_ground_truth_report.py  dump_ida_layout.py  dump_lancelot_report.py  dump_viv_layout.py  show_report_in_ida.py
resources/evaluation/SoK/SoK-windows-testsuite/: readme.md
resources/test/: k32.i64
src/: analysis.rs  arch.rs  flowmeta.rs  insn.rs  lib.rs  loader.rs  main.rs  rsrc.rs  test.rs  util.rs  workspace.rs  xref.rs
src/analysis/: mod.rs  orphans.rs
src/analysis/pe/: cfguardtable.rs  entrypoint.rs  exports.rs  imports.rs  mod.rs  ptrs.rs  relocs.rs  runtimefunctions.rs
src/analysis/pe/sigs/: mod.rs
src/analysis/pe/sigs/patterns/: readme.md  (+1 more)
src/loaders/: mod.rs  pe.rs  sc.rs
utils/: utils.go
utils/entropy/: entropy.go
utils/entropy/ent/: ent.go  readme.md
utils/hexdump/: hexdump.go
utils/hexdump/cli/: hexdump.go
workspace/: address_space.go  emulator.go  hooks.go  loaded_module.go  snapshot.go  workspace.go
workspace/dora/: artifacts.go  dora.go
workspace/dora/emu_disassembly/: emu_disassembler.go
workspace/dora/linear_disassembler/: linear_disassembler.go
workspace/dora/linear_disassembly/: linear_disassembly.go
