[package]
name = "lancelot"
version = "0.1.0"
authors = ["Willi Ballenthin <wilbal1087@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
simplelog = "^0.5.0"
goblin = "0.0.22"
# zydis==0.0.3 requires rust-bindgen, which requires clang 3.9
zydis = "0.0.3"
matches = "0.1.8"
byteorder = "1.2.7"
num = "0.2"
num-traits = "0.2"
strum = "0.15"
strum_macros = "0.15"
failure = "0.1.5"
bitflags = "1.0.4"
rust-embed = { version="4.4.0", features=["debug-embed"] }
xml-rs = "0.8"
better-panic = "0.1.1"
md5 = "0.6.1"

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
test = []

[profile.release]
lto = true