#cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"

members = [
    "core",
    "flirt",
    "pyflirt",
    "pylancelot",
    "bin",
]

[profile.release]
lto = "fat"
codegen-units = 1
incremental = true

[profile.test]
# flirt is quite slow, and particularly slow without optimizations.
# e.g. 10s to load the typical rule set.
# therefore, enable optimizations to help make tests go faster.
# but hopefully this isn't as painful due to incremental being enabled.
opt-level = 3
incremental = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
# third party dependencies aren't rebuilt as often, so optimize them more.
# via: https://benw.is/posts/how-i-improved-my-rust-compile-times-by-seventy-five-percent
opt-level = 3
