[package]
name = "lancelot-flirt"
description = "parse and match FLIRT signatures"
license = "Apache-2.0"
version = "0.4.4"
authors = ["Willi Ballenthin <wilbal1087@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "5"
regex = "1.3"
bitvec = "0.18"
clap = "2.33"
fern = "0.5"
chrono = "0.4"
better-panic = "0.2"
inflate = "0.4"
anyhow = "1"
thiserror = "1"
bitflags = "1"
