[package]
name = "lancelot-flirt"
description = "parse and match FLIRT signatures"
license = "Apache-2.0"
version = "0.6.2"
authors = ["Willi Ballenthin <wilbal1087@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "6"
regex = "1.3"
bitvec = "0.20"
clap = "2.33"
fern = "0.5"
chrono = "0.4"
better-panic = "0.2"
inflate = "0.4"
anyhow = "1"
thiserror = "1"
bitflags = "1"
smallvec = "1"
libc = "0.2"

# https://github.com/myrrlyn/funty/issues/3#issuecomment-778629965
funty="=1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "regex"
harness = false

