[package]
name = "lancelot-flirt"
description = "parse and match FLIRT signatures"
license = "Apache-2.0"
version = "0.9.4"
authors = ["Willi Ballenthin <william.ballenthin@mandiant.com>"]
edition = "2021"
homepage = "https://github.com/williballenthin/lancelot"
repository = "https://github.com/williballenthin/lancelot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "7"
regex = "1.3"
bitvec = "1"
clap = "3"
fern = "0.7"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
better-panic = "0.3"
inflate = "0.4"
anyhow = "1"
thiserror = "2"
bitflags = "1"
smallvec = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "regex"
harness = false

