[package]
name = "jslancelot"
version = "0.8.5"
authors = ["Willi Ballenthin <william.ballenthin@mandiant.com>"]
edition = "2021"
homepage = "https://github.com/williballenthin/lancelot"
repository = "https://github.com/williballenthin/lancelot"
license = "Apache 2.0"
description = "Javascript bindings for Lancelot"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
lancelot = { path = "../core", version = "0.8.5" }
anyhow = "1"
wasm-bindgen = { version = "0.2", features = ["enable-interning", "std"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = "0.1"

[features]
# the default allocator is about 6k, wee_alloc is 1k
default = ["wee_alloc"]
