[package]
name = "python-flirt"
version = "0.4.5"
authors = ["William Ballenthin <william.ballenthin@fireeye.com>"]
edition = "2018"

[lib]
name = "flirt"
crate-type = ["cdylib"]

[dependencies]
lancelot-flirt = { path = "../flirt", version = "0.4.5" }
pyo3 = { version = "0.13"}
anyhow = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
requires-dist = []
classifier = [
  "Programming Language :: Rust",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Software Development :: Disassemblers",
]
