[package]
name = "python-flirt"
version = "0.6.5"
authors = ["William Ballenthin <william.ballenthin@fireeye.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/williballenthin/lancelot/tree/master/pyflirt"
homepage = "https://github.com/williballenthin/lancelot/tree/master/pyflirt"
readme = "README.md"

[lib]
name = "flirt"
crate-type = ["cdylib"]

[dependencies]
lancelot-flirt = { path = "../flirt", version = "0.6.5" }
pyo3 = { version = "0.15"}
anyhow = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
requires-dist = []
classifier = [
  "Programming Language :: Rust",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Software Development :: Disassemblers",
]
