[package]
name = "pylancelot"
version = "0.8.0"
authors = ["Willi Ballenthin <william.ballenthin@mandiant.com>"]
edition = "2021"
homepage = "https://github.com/williballenthin/lancelot"
repository = "https://github.com/williballenthin/lancelot"

[lib]
name = "lancelot"
crate-type = ["cdylib"]

[dependencies]
lancelot = { path = "../core", version = "0.8.0" }
pyo3 = { version = "0.17"}
anyhow = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
