[package]
name = "pylancelot"
version = "0.9.10"
authors = ["Willi Ballenthin <william.ballenthin@mandiant.com>"]
edition = "2021"
homepage = "https://github.com/williballenthin/lancelot"
repository = "https://github.com/williballenthin/lancelot"

[lib]
name = "lancelot"
crate-type = ["cdylib"]

[dependencies]
lancelot = { path = "../core", version = "0.9.10" }
pyo3 = { version = "0.27", features = ["generate-import-lib"] }
pyo3-log = "0.13"
anyhow = "1"
sha256 = "1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
